--- a/xxl-job-admin/src/main/resources/i18n/message.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message.properties
@@ -107,6 +107,7 @@ jobinfo_field_id=任务ID
 jobinfo_field_jobgroup=执行器
 jobinfo_field_jobdesc=任务描述
 jobinfo_field_gluetype=运行模式
+jobinfo_filed_tz=时区
 jobinfo_field_executorparam=任务参数
 jobinfo_field_cron_unvalid=Cron格式非法
 jobinfo_field_cron_never_fire=Cron非法，永远不会触发
