--- a/xxl-job-admin/src/main/resources/i18n/message_en.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_en.properties
@@ -108,6 +108,7 @@ jobinfo_field_jobgroup=Executor
 jobinfo_field_jobdesc=Job description
 jobinfo_field_timeout=Job timeout period
 jobinfo_field_gluetype=GLUE Type
+jobinfo_filed_tz=timezone
 jobinfo_field_executorparam=Param
 jobinfo_field_cron_unvalid=The Cron is illegal
 jobinfo_field_cron_never_fire=The Cron will never fire
