--- a/xxl-job-admin/src/main/resources/i18n/message_en.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_en.properties
@@ -10,6 +10,7 @@ system_save=Save
 system_cancel=Cancel
 system_search=Search
 system_status=Status
+system_tz=timezone
 system_opt=Operate
 system_please_input=please input 
 system_please_choose=please choose 
