--- a/xxl-job-admin/src/main/resources/i18n/message.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message.properties
@@ -11,6 +11,7 @@ system_cancel=取消
 system_search=搜索
 system_status=状态
 system_tz=时区
+robot_alarm=机器人报警
 system_next_time=下次执行时间
 system_opt=操作
 system_please_input=请输入
@@ -110,6 +111,7 @@ jobinfo_field_jobgroup=执行器
 jobinfo_field_jobdesc=任务描述
 jobinfo_field_gluetype=运行模式
 jobinfo_filed_tz=时区
+jobinfo_filed_robot_alarm=报警机器人
 jobinfo_field_executorparam=任务参数
 jobinfo_field_cron_unvalid=Cron格式非法
 jobinfo_field_cron_never_fire=Cron非法，永远不会触发
@@ -117,6 +119,7 @@ jobinfo_field_author=负责人
 jobinfo_field_timeout=任务超时时间
 jobinfo_field_alarmemail=报警邮件
 jobinfo_field_alarmemail_placeholder=请输入报警邮件，多个邮件地址则逗号分隔
+jobinfo_field_robot_alarm_placeholder=请输入告警内容
 jobinfo_field_executorRouteStrategy=路由策略
 jobinfo_field_childJobId=子任务ID
 jobinfo_field_childJobId_placeholder=请输入子任务的任务ID,如存在多个则逗号分隔
