--- a/xxl-job-admin/src/main/resources/i18n/message_en.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_en.properties
@@ -11,6 +11,7 @@ system_cancel=Cancel
 system_search=Search
 system_status=Status
 system_tz=timezone
+robot_alarm=robot alarm
 system_next_time=next trigger time
 system_opt=Operate
 system_please_input=please input 
@@ -111,12 +112,14 @@ jobinfo_field_jobdesc=Job description
 jobinfo_field_timeout=Job timeout period
 jobinfo_field_gluetype=GLUE Type
 jobinfo_filed_tz=timezone
+jobinfo_filed_robot_alarm=robot alarm
 jobinfo_field_executorparam=Param
 jobinfo_field_cron_unvalid=The Cron is illegal
 jobinfo_field_cron_never_fire=The Cron will never fire
 jobinfo_field_author=Author
 jobinfo_field_alarmemail=Alarm email
 jobinfo_field_alarmemail_placeholder=Please enter alarm mail, if there are more than one comma separated
+jobinfo_field_robot_alarm_placeholder=Please enter alarm message.
 jobinfo_field_executorRouteStrategy=Route Strategy
 jobinfo_field_childJobId=Child Job ID
 jobinfo_field_childJobId_placeholder=Please enter the Child job ID, if there are more than one comma separated
