--- a/xxl-job-admin/src/main/resources/i18n/message.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message.properties
@@ -29,6 +29,7 @@ system_empty=无
 system_opt_suc=操作成功
 system_opt_fail=操作失败
 system_opt_edit=编辑
+system_opt_copy=复制
 system_opt_del=删除
 system_unvalid=非法
 system_not_found=不存在
