--- a/xxl-job-admin/src/main/resources/i18n/message_en.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_en.properties
@@ -30,6 +30,7 @@ system_opt_suc=operate success
 system_opt_fail=operate fail
 system_opt_edit=Edit 
 system_opt_copy=copy
+system_opt_export=export
 system_opt_del=Delete 
 system_unvalid=illegal
 system_not_found=not exist
