feature/Feature-Multiple-System-Support-20201224 多系统支持

--- a/xxl-job-admin/src/main/resources/i18n/message_en.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message_en.properties
@@ -105,6 +105,8 @@ job_dashboard_rate_report=Percentage distribution
 
 ## job info
 jobinfo_name=Job Manage
+ordering_jobinfo_name=ordering
+delivery_jobinfo_name=delivery
 jobinfo_job=Job
 jobinfo_field_add=Add Job
 jobinfo_field_update=Edit Job
