--- a/xxl-job-admin/src/main/resources/i18n/message.properties
+++ b/xxl-job-admin/src/main/resources/i18n/message.properties
@@ -105,6 +105,8 @@ job_dashboard_rate_report=成功比例图
 
 ## job info
 jobinfo_name=任务管理
+ordering_jobinfo_name=外卖任务管理
+delivery_jobinfo_name=配送任务管理
 jobinfo_job=任务
 jobinfo_field_add=新增
 jobinfo_field_update=更新任务
